feat: demo mode
